buscador de ficha en campañas agregado

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,10 +5,297 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* FORMS */
+
+.form-style-8 {
+  font-family: "Open Sans Condensed", arial, sans;
+  width: 80%;
+  padding: 4rem;
+  background: #ffffff;
+  margin: 100px auto;
+  margin-top: 2rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+}
+
+.form-style-8 h2 {
+  background: #4d4d4d;
+  text-transform: uppercase;
+  font-family: "Open Sans Condensed", sans-serif;
+  color: white;
+  font-size: 20px;
+  font-weight: 100;
+  padding: 20px;
+  margin: -30px -30px 30px -30px;
+}
+
+.form-style-8 input[type="text"],
+.form-style-8 input[type="date"],
+.form-style-8 input[type="datetime"],
+.form-style-8 input[type="email"],
+.form-style-8 input[type="number"],
+.form-style-8 input[type="search"],
+.form-style-8 input[type="time"],
+.form-style-8 input[type="url"],
+.form-style-8 input[type="password"],
+.form-style-8 textarea,
+.form-style-8 select {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  outline: none;
+  display: block;
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background: transparent;
+  margin-bottom: 10px;
+  font: 16px Arial, Helvetica, sans-serif;
+  height: 45px;
+}
+
+.form-style-8 button {
+  font: 13px Arial, Helvetica, sans-serif;
+}
+
+.form-style-8 textarea {
+  resize: none;
+  overflow: hidden;
+}
+
+.help-text {
+  display: block;
+  margin-top: 0.5rem;
+  font-size: var(--font-size-small);
+}
+
+/* VALIDATIONS */
+
+.form-style-8 input:placeholder-shown + label {
+  opacity: 0;
+  transform: translateY(1rem);
+}
+
+.has-dynamic-label {
+  position: relative;
+  padding-top: 1.5rem;
+  font: 13px Arial, Helvetica, sans-serif;
+}
+
+.has-dynamic-label label {
+  position: absolute;
+  top: 0;
+  font-size: var(--font-size-small);
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.2s ease-out;
+  background-color: #dcdbdb;
+}
+
+.form-style-8 input:required + .help-text::before {
+  content: "*Required";
+}
+
+.form-style-8 input:optional + .help-text::before {
+  content: "*Optional";
+}
+
+.form-style-8 input:read-only {
+  border-color: gray !important;
+  color: gray;
+  cursor: not-allowed;
+}
+
+/* 
+.form-style-8 input:valid {
+  border-color: green !important;
+ 
+}
+
+.form-style-8 input:invalid {
+  border-color: red !important;
+ 
+}
+ */
+
+.form-style-8 input[type="date"]::before {
+  content: attr(data-placeholder);
+  width: 100%;
+}
+
+.form-style-8 input[type="date"]:focus::before,
+.form-style-8 input[type="date"]:valid::before {
+  display: none;
+}
+
+/* 
+.form-style-8 select {
+  border-color: red !important;
+}
+
+.form-style-8 select:valid {
+  border-color: green!important;
+}
+
+.form-style-8 input:invalid:focus {
+  border-color: red !important;
+}
+
+.form-style-8 input:invalid+.help-text {
+  color: red !important;
+} */
+
+.form-style-8 input[type="email"]:invalid + .help-text::before {
+  content: "You must enter a valid email.";
+}
+
+.form-style-8 input:out-of-range + .help-text::before {
+  content: "Out of range";
+}
+
+.suggestion-active {
+  background: #dcdbdb;
+}
+
+/* AUTH */
+
+.container {
+  height: 100%;
+  align-content: center;
+}
+
+.card {
+  height: 370px;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 400px;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
+.social_icon span {
+  font-size: 60px;
+  margin-left: 10px;
+  color: #ffc312;
+}
+
+.social_icon span:hover {
+  color: white;
+  cursor: pointer;
+}
+
+.card-header h3 {
+  color: white;
+}
+
+.social_icon {
+  position: absolute;
+  right: 20px;
+  top: -45px;
+}
+
+.input-group-prepend span {
+  width: 50px;
+  /* background-color: #ffc312; */
+  color: black;
+  border: 0 !important;
+}
+
+input:focus {
+  outline: 0 0 0 0 !important;
+  box-shadow: 0 0 0 0 !important;
+}
+
+.remember {
+  color: white;
+}
+
+.remember input {
+  width: 20px;
+  height: 20px;
+  margin-left: 15px;
+  margin-right: 5px;
+}
+
+.login_btn {
+  /* color: black; */
+  /* background-color: #ffc312; */
+  width: 100px;
+}
+
+.login_btn:hover {
+  color: black;
+  background-color: white;
+}
+
+.links {
+  color: white;
+}
+
+.links a {
+  margin-left: 4px;
+}
+
+/* IMG */
+
+.werchowlogo {
+  width: 200px;
+  height: 50px;
+}
+
+.carencias {
+  width: 860px;
+  height: 90px;
+}
+
+/* TEXT SOLICITUD */
+
+.text {
+  font-size: 0.65em;
+  text-align: justify;
+  font-weight: bold;
+}
+
+.tabla {
+  width: 100%;
+  border: 1px solid #000;
+  color: black;
+}
+
+.tabla-th-td {
+  text-align: left;
+  vertical-align: top;
+  border: 1px solid #000;
+  border-collapse: collapse;
+  caption-side: bottom;
+}
+
+.tabla-thead {
+  background: #4d4d4d;
+  color: white;
+}
+
+.select {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  outline: none;
+  display: block;
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background: transparent;
+  margin-bottom: 10px;
+  font: 16px Arial, Helvetica, sans-serif;
+  height: 45px;
 }
