--- a/src/css/index.css
+++ b/src/css/index.css
@@ -255,7 +255,7 @@ input:focus {
   font-weight: bold;
 }
 
-.tabla {
+/* .tabla {
   width: 100%;
   border: 1px solid #000;
   color: black;
@@ -272,7 +272,7 @@ input:focus {
 .tabla-thead {
   background: #4d4d4d;
   color: white;
-}
+} */
 
 .select {
   box-sizing: border-box;
