--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,10 +3,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  font-size: 13px;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -299,3 +300,5 @@ input:focus {
   font: 16px Arial, Helvetica, sans-serif;
   height: 45px;
 }
+
+@media print{@page {size: landscape}}
