informes de efectividad de mutual y de werchow funcionando y dependiendo de solamente la base de datos. Sujetos a revision y correccion si corresponde

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -301,4 +301,9 @@ input:focus {
   height: 45px;
 }
 
-@media print{@page {size: landscape}}
+@media print {
+ 
+  /* @page {
+    size: landscape;    
+  } */
+}
