Modulo de prestamos completo en fase de prueba y verificacion de errores. Sujeto a modificaciones y/o agregado de funciones (estadisticas)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -301,11 +301,11 @@ input:focus {
   height: 45px;
 }
 
-@media print {
-  /* @page {
-    size: landscape;    
-  } */
-}
+/* @media print {
+  @page {
+    size: landscape;
+  }
+} */
 
 .dropdown-submenu {
   position: relative;
